# private-journal-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
private_journal_mcp/: __init__.py  embeddings.py  journal.py  paths.py  search.py  server.py  types.py
src/: embeddings.ts  index.ts  journal.ts  paths.ts  search.ts  server.ts  types.ts
tests/: __init__.py  embeddings.test.ts  journal.test.ts  test_journal.py  test_paths.py
